Refactor and enhance utility functions in electron-app
- Updated getOverlayFileName to use state management and added error handling for invalid index and loaded FIT files.
- Improved getThemeColors to return a copy of the theme colors object.
- Enhanced getUnitSymbol with clearer documentation and fallback labels for unit symbols.
- Refined setupListeners to improve menu handling and cleanup on user interactions.
- Cleaned up mainProcessStateManager for better readability and consistency in state management.
- Removed unused renderChart.js file and replaced references with renderChartJS.js.
- Updated setupTheme to handle theme retrieval and application more robustly.
- Fixed import path in showFitData for createGlobalChartStatusIndicator.
- Adjusted showNotification to ensure consistent duration handling.
- Deleted stateSystemGuide.js as it was no longer needed.
- Added updateGlobalChartStatusIndicator utility for managing chart status indicators.

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -469,7 +469,7 @@
     "./utils/patchSummaryFields.js": "./utils/patchSummaryFields.js",
     "./utils/recentFiles.js": "./utils/recentFiles.js",
     "./utils/removeExitFullscreenOverlay.js": "./utils/removeExitFullscreenOverlay.js",
-    "./utils/renderChart.js": "./utils/renderChart.js",
+    "./utils/renderChartJS.js": "./utils/renderChartJS.js",
     "./utils/renderChartJS.js": "./utils/renderChartJS.js",
     "./utils/rendererUtils.js": "./utils/rendererUtils.js",
     "./utils/renderMap.js": "./utils/renderMap.js",
