Unifies indentation for Markdown and improves code formatting
Standardizes Markdown indentation to 2 spaces across docs, templates, and configuration to ensure consistency and readability. Adjusts Prettier config to enforce the new style for Markdown files. Cleans up code formatting in documentation and source files, reducing unnecessary whitespace and aligning with the updated formatting rules. No functional changes are introduced.

--- a/.prettierrc
+++ b/.prettierrc
@@ -48,6 +48,12 @@
             "options": {
                 "printWidth": 120
             }
+        },
+        {
+            "files": "*.md",
+            "options": {
+                "tabWidth": 1
+            }
         }
     ]
 }
