--- a/electron-app/.prettierrc
+++ b/electron-app/.prettierrc
@@ -48,6 +48,12 @@
             "options": {
                 "printWidth": 120
             }
+        },
+        {
+            "files": "*.md",
+            "options": {
+                "tabWidth": 1
+            }
         }
     ]
 }
