Renames and refactors map lap drawing logic
Replaces the previous lap map drawing implementation with a refactored and renamed module for improved clarity and maintainability. Updates all references throughout the codebase to use the new naming and removes the old implementation. Streamlines integration with lap selection and overlay drawing, ensuring consistent and clear map rendering logic.

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -448,7 +448,7 @@
     "./utils/chartSpec.js": "./utils/chartSpec.js",
     "./utils/copyTableAsCSV.js": "./utils/copyTableAsCSV.js",
     "./utils/createTables.js": "./utils/createTables.js",
-    "./utils/drawMapForLap.js": "./utils/drawMapForLap.js",
+    "./utils/mapDrawLaps.js": "./utils/mapDrawLaps.js",
     "./utils/enableTabButtons.js": "./utils/enableTabButtons.js",
     "./utils/formatDistance.js": "./utils/formatDistance.js",
     "./utils/formatDuration.js": "./utils/formatDuration.js",
