🔧 [build] Update lint config and dependencies for JS-only linting
- Suppresses TypeScript ESLint rule errors by ignoring built output and declaration files.
- Expands ignored paths to exclude dist, node_modules, and d.ts artifacts.
- Adds rules to allow unused event parameters prefixed with underscore for Electron conventions.
- Relaxes CSS lint rules to accommodate project-specific patterns and reduce noise.
- Refactors some main code to alias unused variables, keeping codebase lint-clean.
- Adds ts-migrate and ts-migrate-plugins to devDependencies.
- Updates lockfile with Babel/core-js and related package upgrades.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -387,6 +387,8 @@
     "makensis": "^3.0.1",
     "screenfull": "^6.0.2",
     "stylelint-config-standard": "^39.0.0",
+    "ts-migrate": "^0.1.35",
+    "ts-migrate-plugins": "^0.1.35",
     "vitest": "3.2.4"
   },
   "dependencies": {
