--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -188,7 +188,7 @@
     ]
   },
   "scripts": {
-    "test": "vitest",
+    "test": "vitest --run",
     "test:jest": "jest",
     "start": "electron . --inspect=9229",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
@@ -220,7 +220,7 @@
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
     "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest --coverage --run",
     "test:unit": "vitest --run tests/unit",
     "test:integration": "vitest --run tests/integration",
     "test:e2e": "jest --testPathPattern=e2e",
@@ -379,6 +379,7 @@
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@types/jest": "^30.0.0",
     "@types/mocha": "10.0.10",
+    "@vitest/coverage-v8": "^3.2.4",
     "cross-env": "^10.0.0",
     "electron": "37.2.5",
     "electron-builder": "^26.0.19",
