--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "search.exclude": {
         "out": true
     },
+    "vitest.rootConfig": "C:\\Users\\Nick\\Dropbox\\PC (2)\\Documents\\GitHub\\FitFileViewer\\electron-app\\vitest.config.js",
     "typescript.tsc.autoDetect": "off",
     "github.copilot.chat.codeGeneration.instructions": "Follow the comprehensive coding guidelines and architectural patterns defined in the copilot-instructions.md file at the project root. Focus exclusively on the FitFileViewer Electron application located in the root and electron-app/ directories. Ignore fit-test-files/, vscode-extension/, vis/, and other non-core project folders. Use the established modular architecture with utilities in utils/, follow the ES6+ module patterns, implement proper error handling, support the theme system, and maintain the security model with context isolation. Prioritize performance, accessibility, and cross-platform compatibility. Reference existing patterns in main.js, renderer.js, preload.js, and the utils/ modules when suggesting code changes.",
     "github.copilot.chat.localeOverride": "en",
