Enhance theming and tab management with improved state handling and document resolution
- Updated theme.js to add robust error handling for CSS variable retrieval, ensuring compatibility with various environments.
- Refactored tabStateManager.js to dynamically access the state manager and document, improving test reliability and reducing stale imports.
- Enhanced updateActiveTab.js and updateTabVisibility.js to utilize the new dynamic state manager access, ensuring consistent state updates across the application.
- Modified vitest.config.js to allow multiple forked workers for tests, preventing memory growth issues during test execution.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -38,7 +38,6 @@
     "win32-tar.gz",
     "win32-tar.xz",
     "mac-x64-dmg",
-    "mac-x64-pkg",
     "mac-x64-tar.xz",
     "mac-x64-tar.gz",
     "mac-x64-tar.bz2",
@@ -70,10 +69,6 @@
     "win": {
       "icon": "icons/favicon-256x256.ico",
       "target": [
-        "nsis",
-        "nsis-web",
-        "zip",
-        "7z",
         "portable",
         "squirrel",
         "msi",
@@ -188,7 +183,7 @@
     ]
   },
   "scripts": {
-    "test": "vitest --run",
+    "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run",
     "test:jest": "jest",
     "start": "electron . --inspect=9229",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
@@ -220,12 +215,12 @@
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
     "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage --run",
-    "test:unit": "vitest --run tests/unit",
-    "test:integration": "vitest --run tests/integration",
+    "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --coverage --run",
+    "test:unit": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run tests/unit",
+    "test:integration": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run tests/integration",
     "test:e2e": "jest --testPathPattern=e2e",
-    "test:ci": "vitest --run --coverage",
-    "test:tabs": "vitest --run --reporter=verbose tests/unit/tabs",
+    "test:ci": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --coverage",
+    "test:tabs": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=verbose tests/unit/tabs",
     "build:prod": "cross-env NODE_ENV=production electron-builder",
     "build:dev": "cross-env NODE_ENV=development electron-builder",
     "build:dev:all": "cross-env NODE_ENV=development electron-builder -l",
