🚜 [refactor] Harmonize variable declarations and improve code style
- Refactors multiple files to use consistent variable declaration and grouping, especially for related constants.
- Improves code readability by aligning indentation, grouping, and line breaks for complex destructuring and multi-line assignments.
- Enhances maintainability by reducing nested blocks and clarifying intent with more straightforward control flows.
- Adds clearer handling for conditional returns and error cases, supporting better debugging and state tracking.
- Makes style and formatting changes that facilitate future enhancements and minimize merge conflicts.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,33 +1,27 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"type": "npm",
-			"script": "watch",
-			"problemMatcher": "$tsc-watch",
-			"isBackground": true,
-			"presentation": {
-				"reveal": "never"
-			},
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			}
-		},
-		{
-			"label": "run vitest in electron-app",
-			"type": "shell",
-			"command": "npm",
-			"args": [
-				"--prefix",
-				"electron-app",
-				"test"
-			],
-			"isBackground": false,
-			"problemMatcher": [
-				"$eslint-stylish"
-			],
-			"group": "build"
-		}
-	]
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "type": "npm",
+            "script": "watch",
+            "problemMatcher": "$tsc-watch",
+            "isBackground": true,
+            "presentation": {
+                "reveal": "never"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "run vitest in electron-app",
+            "type": "shell",
+            "command": "npm",
+            "args": ["--prefix", "electron-app", "test"],
+            "isBackground": false,
+            "problemMatcher": ["$eslint-stylish"],
+            "group": "build"
+        }
+    ]
 }
