--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,4 @@
 {
-    "files.exclude": {
-        "out": false,
-        "**/.git": false
-    },
-    "search.exclude": {
-        "out": true
-    },
-    "vitest.rootConfig": "C:\\Users\\Nick\\Dropbox\\PC (2)\\Documents\\GitHub\\FitFileViewer\\electron-app\\vitest.config.js",
-    "typescript.tsc.autoDetect": "off",
-    "github.copilot.chat.codeGeneration.instructions": "Follow the comprehensive coding guidelines and architectural patterns defined in the copilot-instructions.md file at the project root. Focus exclusively on the FitFileViewer Electron application located in the root and electron-app/ directories. Ignore fit-test-files/, vscode-extension/, vis/, and other non-core project folders. Use the established modular architecture with utilities in utils/, follow the ES6+ module patterns, implement proper error handling, support the theme system, and maintain the security model with context isolation. Prioritize performance, accessibility, and cross-platform compatibility. Reference existing patterns in main.js, renderer.js, preload.js, and the utils/ modules when suggesting code changes.",
-    "github.copilot.chat.localeOverride": "en",
-    "github.copilot.enable": {
-        "*": true,
-        "markdown": true,
-        "javascript": true,
-        "typescript": true,
-        "json": true,
-        "jsonc": true,
-        "css": true,
-        "html": true
-    },
-    "files.associations": {
-        "*.mjs": "javascript",
-        "copilot-instructions.md": "markdown"
-    },
-    "typescript.preferences.includePackageJsonAutoImports": "on",
-    "javascript.preferences.includePackageJsonAutoImports": "on",
-    "javascript.suggest.autoImports": true,
-    "typescript.suggest.autoImports": true,
     "cSpell.words": [
         "appimage",
         "asamuzakjp",
@@ -52,5 +23,35 @@
         "Typpi",
         "Zwift",
         "zwift"
-    ]
+    ],
+    "files.associations": {
+        "*.mjs": "javascript",
+        "copilot-instructions.md": "markdown"
+    },
+    "files.exclude": {
+        "**/.git": false,
+        "out": false
+    },
+    "github.copilot.chat.codeGeneration.instructions": "Follow the comprehensive coding guidelines and architectural patterns defined in the copilot-instructions.md file at the project root. Focus exclusively on the FitFileViewer Electron application located in the root and electron-app/ directories. Ignore fit-test-files/, vscode-extension/, vis/, and other non-core project folders. Use the established modular architecture with utilities in utils/, follow the ES6+ module patterns, implement proper error handling, support the theme system, and maintain the security model with context isolation. Prioritize performance, accessibility, and cross-platform compatibility. Reference existing patterns in main.js, renderer.js, preload.js, and the utils/ modules when suggesting code changes.",
+    "github.copilot.chat.localeOverride": "en",
+    "github.copilot.enable": {
+        "*": true,
+        "css": true,
+        "html": true,
+        "javascript": true,
+        "json": true,
+        "jsonc": true,
+        "markdown": true,
+        "typescript": true
+    },
+    "javascript.preferences.includePackageJsonAutoImports": "on",
+    "javascript.suggest.autoImports": true,
+    "search.exclude": {
+        "out": true
+    },
+    "github.copilot.chat.summarizeAgentConversationHistory.enabled": false,
+    "typescript.preferences.includePackageJsonAutoImports": "on",
+    "typescript.suggest.autoImports": true,
+    "typescript.tsc.autoDetect": "off",
+    "vitest.rootConfig": "C:\\Users\\Nick\\Dropbox\\PC (2)\\Documents\\GitHub\\FitFileViewer\\electron-app\\vitest.config.js"
 }
