🧪 [test] Enforces strict test assertions and improves tab/notification utilities
- Strengthens tests with requireAssertions, sanity checks, and improved invalid input coverage to prevent false positives and missed regressions.
- Refines tab button enablement logic to avoid overriding test states and ensures robust MutationObserver setup for both browser and test environments.
- Enhances notification utility with better error handling, resolves internal state even if elements are missing, and provides test hooks for reliable queue reset.
- Updates CI workflow with focused vitest coverage, stricter global coverage thresholds, and curated coverage include/exclude lists for meaningful 100% gating.
- Upgrades dependencies for improved compatibility, reliability, and test stability.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,4 @@ vscode-extension/*
 electron-app/utils/.prettier-cache
 **/.prettier-cache
 electron-app/coverage-report.json
+electron-app/html/
