--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fitfileviewer",
-  "packageManager": "npm@11.4.2",
+  "packageManager": "npm@11.6.0",
   "version": "26.4.0",
   "main": "main.js",
   "appid": "com.example.fitfileviewer",
@@ -183,7 +183,7 @@
     ]
   },
   "scripts": {
-    "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run",
+    "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=dot --silent",
     "test:jest": "jest",
     "start": "electron . --inspect=9229",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
@@ -215,7 +215,7 @@
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
     "test:watch": "vitest --watch",
-    "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --coverage --run",
+    "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --coverage --run --reporter=dot --silent",
     "test:unit": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run tests/unit",
     "test:integration": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run tests/integration",
     "test:e2e": "jest --testPathPattern=e2e",
@@ -356,9 +356,9 @@
   "license": "Unlicense",
   "description": "Fit File Viewer is a cross-platform application for parsing, visualizing, and analyzing .fit files using charts, maps, tables, and other data visualization tools for Garmin and fitness activities.",
   "devDependencies": {
-    "@actions/artifact": "^1.1.2",
+    "@actions/artifact": "^2.3.2",
     "@actions/attest": "^1.6.0",
-    "@actions/cache": "^4.0.3",
+    "@actions/cache": "^4.0.5",
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.1",
@@ -366,24 +366,25 @@
     "@actions/http-client": "^2.2.3",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.2",
-    "@eslint/css": "0.10.0",
-    "@eslint/js": "^9.32.0",
-    "@eslint/json": "^0.13.1",
-    "@eslint/markdown": "7.1.0",
+    "@eslint/css": "0.11.0",
+    "@eslint/js": "^9.35.0",
+    "@eslint/json": "^0.13.2",
+    "@eslint/markdown": "7.2.0",
     "@kurkle/color": "^0.4.0",
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@types/jest": "^30.0.0",
     "@types/mocha": "10.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@vitest/coverage-v8": "^3.2.4",
     "cross-env": "^10.0.0",
-    "electron": "37.4.0",
+    "electron": "38.1.0",
     "electron-builder": "^26.0.19",
     "electron-builder-squirrel-windows": "^26.0.19",
-    "eslint": "^9.32.0",
+    "eslint": "^9.35.0",
     "git-cliff": "^2.10.0",
-    "globals": "^16.3.0",
-    "jsdom": "^26.1.0",
-    "makensis": "^3.0.1",
+    "globals": "^16.4.0",
+    "jsdom": "^27.0.0",
+    "makensis": "^3.0.3",
     "screenfull": "^6.0.2",
     "stylelint-config-standard": "^39.0.0",
     "ts-migrate": "^0.1.35",
@@ -393,7 +394,7 @@
   "dependencies": {
     "@garmin/fitsdk": "^21.178.0",
     "electron-conf": "^1.3.0",
-    "electron-log": "^5.4.2",
+    "electron-log": "^5.4.3",
     "electron-updater": "6.6.7"
   },
   "authorEmail": "20943337+Nick2bad4u@users.noreply.github.com",
