🧪 [test] Add strict unit tests for chart and UI components
- Introduces comprehensive, strict-coverage unit tests for chart rendering utilities, status indicators, overlays, and UI controls.
- Validates all major chart types, data edge cases, theme integrations, error handling, and DOM interactions to ensure reliability and maintainability.
- Enables detailed automated verification of user interactions, option toggles, export flows, notifications, and rendering logic.
- Updates .gitignore to exclude new coverage and output artifacts generated by testing.

Relates to improved front-end test coverage and stability.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,5 @@ electron-app/utils/.prettier-cache
 **/.prettier-cache
 electron-app/coverage-report.json
 electron-app/html/
+electron-app/coverage_output.txt
+electron-app/coverage-temp.json
