--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,4 @@ electron-app/coverage-report.json
 electron-app/html/
 electron-app/coverage_output.txt
 electron-app/coverage-temp.json
+electron-app/recent-files-test.json
