--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -373,6 +373,7 @@
     "@kurkle/color": "^0.4.0",
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@types/jest": "^30.0.0",
+    "@types/jsdom": "^21.1.7",
     "@types/mocha": "10.0.10",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@vitest/coverage-v8": "^3.2.4",
