🧪 [test] Add comprehensive tests for preload API; update Electron; improve coverage workflow
- Adds strict, branch-complete tests for preload API including error paths, event handlers, and devTools exposure, ensuring robust coverage and validation of all logic branches.
 - Updates Electron to v38.1.2 for improved stability and compatibility.
 - Refines coverage prompts and workflow to clarify test requirements, coverage thresholds, and available Vitest APIs.
 - Adjusts TypeScript config to exclude test and HTML directories from builds, reducing typecheck noise and improving build performance.
 - Modifies test stubs and utilities to ensure mocks are reliable and consistent across all scenarios.
 - Improves overall test coverage and reliability for future releases.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/tsconfig.json
+++ b/electron-app/tsconfig.json
@@ -105,7 +105,9 @@
         "out",
         "release",
         "src/**/*.test.ts",
-        "src/**/*.test.tsx"
+        "**/html/**",
+        "src/**/*.test.tsx",
+        "**/tests/**",
     ],
     "include": [
         "**/*.js",
