--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -210,6 +210,7 @@
     "clean-releases:10": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags -keepLast 10",
     "clean-releases:all": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags -keepLast 1000",
     "package": "electron-builder --dir",
+    "typecheck": "tsc --project .\\tsconfig.json",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "prettier": "prettier --write .",
@@ -378,7 +379,7 @@
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@vitest/coverage-v8": "^3.2.4",
     "cross-env": "^10.0.0",
-    "electron": "38.1.0",
+    "electron": "38.1.2",
     "electron-builder": "^26.0.19",
     "electron-builder-squirrel-windows": "^26.0.19",
     "eslint": "^9.35.0",
