🧪 [test] Add comprehensive unit tests for charts, tables, tabs, and theming
- Introduces extensive unit test suites covering chart status indicators, global chart status, chart theme listener behaviors, data tables rendering, user/device info box, and tab state manager logic
- Validates correct rendering, state transitions, UI interactions, error handling, and fallback mechanisms for key UI components and utilities
- Improves reliability and ensures robust regression detection across chart, tab, and table features
- Updates test timing thresholds in performance checks to reduce flakiness on slower CI environments

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -183,6 +183,7 @@
     ]
   },
   "scripts": {
+    "tests:convert-to-ts": "node ./scripts/convert-tests-to-ts.mjs",
     "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=dot --silent",
     "test:jest": "jest",
     "start": "electron . --inspect=9229",
