--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -384,6 +384,10 @@
     "electron-builder": "^26.0.19",
     "electron-builder-squirrel-windows": "^26.0.19",
     "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-n": "^17.23.1",
+    "eslint-plugin-perfectionist": "^4.15.0",
+    "eslint-plugin-unicorn": "^61.0.2",
     "git-cliff": "^2.10.0",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
