🛠️ [fix] Improve FIT file loading, state, and middleware robustness
- Refines FIT file loading to consistently extract and display parsed data, improving error handling and notification logic for recent file access and UI.
- Adds development-only logging to preload, reduces console noise in production, and tightens test assertions for better reliability and clarity.
- Updates chart rendering, state change tracking, and computed state to avoid redundant updates and ensure proper initialization.
- Introduces backward-compatible API aliases, corrects observer and window mocks in tests, and enables remote debugging and web security for development.
- Ensures state middleware and computed values are initialized once, preventing duplicate registration and improving diagnostics.

Relates to improved stability and debugging in Electron-based FIT file viewer.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -186,7 +186,7 @@
     "tests:convert-to-ts": "node ./scripts/convert-tests-to-ts.mjs",
     "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=dot --silent",
     "test:jest": "jest",
-    "start": "electron . --inspect=9229",
+    "start": "electron . --inspect=9229 --remote-debugging-port=9222",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
     "build": "electron-builder",
     "build-all": "electron-builder -mwl",
