🧪 [test] Add comprehensive unit tests and robust debugging
- Introduces extensive test suites for key modules, dramatically boosting coverage for main, preload, chart rendering, and state integration logic.
- Improves reliability of recent files menu attachment with robust DOM verification and debugging instrumentation.
- Enhances Vitest config for faster cached runs and better rerun triggers, supporting more efficient test execution and coverage gating.
- Addresses edge cases and error handling, ensuring more resilient state management and DOM operations.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -185,6 +185,7 @@
   "scripts": {
     "tests:convert-to-ts": "node ./scripts/convert-tests-to-ts.mjs",
     "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=dot --silent",
+    "test:changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --changed --run --reporter=dot --silent",
     "test:jest": "jest",
     "start": "electron . --inspect=9229 --remote-debugging-port=9222",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
@@ -217,7 +218,9 @@
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
     "test:watch": "vitest --watch",
+    "test:watch-changed": "vitest --watch --changed",
     "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --coverage --run --reporter=dot --silent",
+    "test:coverage-changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --coverage --changed --run --reporter=dot --silent",
     "test:unit": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run tests/unit",
     "test:integration": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run tests/integration",
     "test:e2e": "jest --testPathPattern=e2e",
