--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -213,8 +213,8 @@
     "clean-releases:all": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags -keepLast 1000",
     "package": "electron-builder --dir",
     "typecheck": "tsc --project .\\tsconfig.json",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint": "eslint --cache --cache-strategy content --cache-location .cache/.eslintcache",
+    "lint:fix": "npm run lint -- --fix",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
     "test:watch": "vitest --watch",
