--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -21,6 +21,8 @@ on:
 
 permissions:
     contents: read
+    # Uncomment the next line to enable OIDC for tokenless Codecov uploads
+    # id-token: write
 
 concurrency:
     group: vitest-${{ github.ref }}
@@ -45,7 +47,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
               with:
-                  node-version: 20
+                  node-version: 24
 
             - name: Cache node modules
               uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
@@ -62,6 +64,16 @@ jobs:
             - name: Run vitest with coverage
               run: |
                   npm run test:ci
+
+                        - name: Upload coverage reports to Codecov
+                            uses: codecov/codecov-action@v5
+                            with:
+                                    token: ${{ secrets.CODECOV_TOKEN }}
+                                    slug: Nick2bad4u/FitFileViewer
+                                    working-directory: electron-app
+                                    files: ./coverage/lcov.info
+                                    flags: electron_app,unit
+                                    fail_ci_if_error: true
 
             - name: Upload coverage artifact
               uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
