--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -385,6 +385,7 @@
     "@types/mocha": "10.0.10",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@vitest/coverage-v8": "^3.2.4",
+    "color": "^5.0.2",
     "cross-env": "^10.0.0",
     "electron": "38.1.2",
     "electron-builder": "^26.0.19",
@@ -398,6 +399,8 @@
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
     "makensis": "^3.0.3",
+    "postcss": "^8.5.6",
+    "postcss-value-parser": "^4.2.0",
     "prettier": "^3.6.2",
     "prettier-eslint": "^16.4.2",
     "prettier-plugin-ini": "^1.3.0",
@@ -416,12 +419,12 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "screenfull": "^6.0.2",
     "@garmin/fitsdk": "^21.178.0",
     "@vitest/ui": "^3.2.4",
     "electron-conf": "^1.3.0",
     "electron-log": "^5.4.3",
-    "electron-updater": "6.6.7"
+    "electron-updater": "6.6.7",
+    "screenfull": "^6.0.2"
   },
   "authorEmail": "20943337+Nick2bad4u@users.noreply.github.com",
   "authorName": "Nick2bad4u",
