✨ [feat] Add overlay file loading and enhance file menu functionality
This commit introduces several new features and enhancements, primarily focused on improving file handling and menu interactions within the Electron application.

✨ **[feat] File Overlay Support**
*   Adds a new menu option, "➕ Add FIT Files as Overlays...", allowing users to load additional FIT files on top of the primary one.
*   Introduces a `menu-open-overlay` IPC channel to trigger the file selector from the renderer process.
*   The `onMenuOpenOverlay` event handler is now exposed through the preload script and typed in `global.d.ts`.

🚜 **[refactor] Menu Creation and IPC Handling**
*   Refactors `createAppMenu.js` to be more robust and context-aware.
    -   It now reliably finds the target window for sending IPC messages, even if the initial `mainWindow` reference is lost.
    -   Centralizes IPC sending logic into a `sendToRenderer` helper function.
    -   Improves the logic for clearing recent files, which now also triggers a UI update and unloads the current file.
*   Refactors IPC listener setup in `listeners.js` using a `ensureMenuForwarder` utility to avoid redundant listener registration.

✨ **[feat] Enhanced File Menu Actions**
*   Adds "📂 Reveal in File Explorer" to the file menu, using `shell.showItemInFolder` to open the file's location.
*   Adds "📋 Copy File Path" to the file menu, which copies the current file's path to the clipboard and shows a success notification.
*   These new menu items are context-aware and are enabled only when a file is loaded.

🎨 **[style] Minor UI Adjustments**
*   Centers the content of the header bar for a more balanced layout.
*   Adjusts the flex properties of card elements to prevent them from growing, maintaining a consistent size.

📝 **[docs] Project Documentation**
*   Adds a DeepWiki badge to the `README.md` to provide AI-powered assistance for the repository.

🧪 **[test] Comprehensive Test Suite Improvements**
*   Adds extensive tests for 

--- a/electron-app/tsconfig.json
+++ b/electron-app/tsconfig.json
@@ -43,6 +43,7 @@
         "allowUnusedLabels": false,
         "alwaysStrict": true,
         "declaration": true,
+        "declarationDir": "./types",
         "declarationMap": true,
         "disableSizeLimit": true,
         "downlevelIteration": true,
