--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -420,10 +420,29 @@
   },
   "dependencies": {
     "@garmin/fitsdk": "^21.178.0",
+    "@maplibre/maplibre-gl-leaflet": "^0.1.3",
     "@vitest/ui": "^3.2.4",
+    "arquero": "^8.0.3",
+    "chart.js": "^4.5.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-zoom": "^2.2.0",
+    "datatables.net": "^2.3.4",
+    "datatables.net-dt": "^2.3.4",
+    "date-fns": "^4.1.0",
     "electron-conf": "^1.3.0",
     "electron-log": "^5.4.3",
     "electron-updater": "6.6.7",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-measure": "^3.1.0",
+    "leaflet-minimap": "^3.6.1",
+    "leaflet.fullscreen": "^4.0.0",
+    "leaflet.locatecontrol": "^0.85.1",
+    "leaflet.markercluster": "^1.5.3",
+    "maplibre-gl": "^5.7.3",
     "screenfull": "^6.0.2"
   },
   "authorEmail": "20943337+Nick2bad4u@users.noreply.github.com",
