--- a/lychee.toml
+++ b/lychee.toml
@@ -117,7 +117,7 @@ exclude = [
 ]
 
 # Exclude these filesystem paths from getting checked.
-exclude_path = ["github/workflows", "electron-app/libs", "electron-app/node_modules"]
+exclude_path = ["github/workflows", "electron-app/ffv", "electron-app/node_modules"]
 
 # # URLs to check (supports regex). Has preference over all excludes.
 # include = ['gist\.github\.com.*']
