✨ [feat] Introduce centralized resource and event listener management
This commit introduces a comprehensive `ResourceManager` and a new `EventListenerManager` to centralize and automate the cleanup of application resources, preventing memory leaks and improving application stability.

### ✨ Source Code Changes:
- **New `ResourceManager`**:
    - Adds a new singleton `ResourceManager` to track and manage the lifecycle of various resources like charts, maps, timers, intervals, observers, and workers.
    - Provides a unified API (`register`, `unregister`, `cleanupAll`) for consistent resource handling.
    - Integrates with the application lifecycle, automatically cleaning up all registered resources on window unload or during a manual shutdown sequence.
- **New `EventListenerManager`**:
    - Introduces `addEventListenerWithCleanup` to register event listeners that are automatically tracked.
    - All tracked listeners can be removed with a single call to `cleanupEventListeners`, which is now hooked into the `ResourceManager`.
- **Refactored UI Components**:
    - Updates modals (`about`, `keyboardShortcuts`, `zoneColorPicker`), notifications, and tab button setup logic to use `addEventListenerWithCleanup` instead of `element.addEventListener`. This ensures all listeners are properly managed and cleaned up.
- **Chart Management**:
    - Integrates `renderChartJS` with the `ResourceManager`. New charts are now automatically registered for cleanup when they are created.
- **Performance Optimization**:
    - Implements background pre-rendering for charts in `showFitData.js`. Charts are now rendered during browser idle time after a file is loaded, making the "Charts" tab appear to load instantly.

### 🧪 Test & Build Changes:
- **Unit Tests**:
    - Updates numerous unit tests for tab management and UI components to align with the new event listener management system. Tests now verify functionality rather than implementation details like manually attached event handlers.

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -213,6 +213,7 @@
     "clean-releases:all": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags -keepLast 1000",
     "package": "electron-builder --dir",
     "typecheck": "tsc --project .\\tsconfig.json",
+    "types:build": "tsc --project .\\tsconfig.json --declaration --emitDeclarationOnly --outDir ./types",
     "lint": "eslint --cache --cache-strategy content --cache-location .cache/.eslintcache",
     "lint:all": "npm run lint && npm run prettier",
     "lint:fix": "npm run lint -- --fix",
