🚜 [refactor] Modernize and streamline codebase
Refactors and modernizes the codebase for improved maintainability, performance, and consistency.

- ⚙️ Updates Electron debugging port and vitest config.
- 🧹 Adds `knip.json` to manage unused files and dependencies.
 - Helps to keep the project lean and focused.
- 🚜 Refactors `main-ui.js` to remove `setupDOMContentLoaded` and update legacy globals.
 - Simplifies the initialization process and aligns with modern state management.
- 🧪 Updates comprehensive tests and removes legacy `setupDOMContentLoaded` mocks.
- 🛠️ Patches `renderSummaryHelpers` to increase stability and remove compatiblity issues.
 - Improves the way storage keys are generated.
- 🛠️ Patches `formatTooltipData.js` to use centralized formatters and add line breaks for tooltips.
 - Ensures consistency in data formatting and enhances user experience.
- ✨ Adds number validation and conversion helpers.
 - Introduces centralized utilities for safe number validation and conversion.
- 🛠️ Patches `patchSummaryFields.js` to use `safeToNumber` from `/helpers` and removes legacy aliases.
 - Ensures consistent and safe number handling across summary fields.
- 🧹 Organizes and optimizes imports across multiple modules.
 - Improves code readability, maintainability, and organization.
- 📝 Adds comprehensive tests for external and info IPC handlers.
 - Ensures robust and reliable inter-process communication.
- 🛠️ Patches `settingsModal.js` to improve theme handling.
 - Fixes theme selection and accent color synchronization.
- 🛠️ Patches `addFullScreenButton.js` to remove legacy setup and improve button functionality.
 - Ensures consistent and reliable fullscreen button behavior.
- 🧹 Removes exit fullscreen overlay from specified container.
- 🛠️ Patches `createMarkerCountSelector.js` to use legacy global usage wrapper.
- 🛠️ Patches `enableTabButtons.js` to expose function globally for debugging.
- 🧹 Removes `theme` from `utils/index.js` to prevent circular dependencies.
-

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,6 @@
     "typescript.preferences.includePackageJsonAutoImports": "on",
     "typescript.suggest.autoImports": true,
     "typescript.tsc.autoDetect": "off",
-    "vitest.rootConfig": "C:\\Users\\Nick\\Dropbox\\PC (2)\\Documents\\GitHub\\FitFileViewer\\electron-app\\vitest.config.js"
+    "vitest.rootConfig": "C:\\Users\\Nick\\Dropbox\\PC (2)\\Documents\\GitHub\\FitFileViewer\\electron-app\\vitest.config.js",
+    "vitest.vitestPackagePath": "C:\\Users\\Nick\\Dropbox\\PC (2)\\Documents\\GitHub\\FitFileViewer\\electron-app\\node_modules\\vitest\\package.json",
 }
