--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -434,6 +434,7 @@
     "electron-log": "^5.4.3",
     "electron-updater": "6.6.8",
     "hammerjs": "^2.0.8",
+    "iconify-icon": "^3.0.1",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
