🎨 [style] Enhance chart UI with icons
Updates the chart UI to improve visual clarity and user experience.

- Adds Iconify icons to chart titles, axis labels, and status indicators.
 - Improves the visual representation of chart elements.
- Refactors chart components to use Iconify icons instead of text-based indicators.
 - Enhances the visual appeal and clarity of chart status.
- Updates chart hover effects to use theme colors.
 - Improves the visual consistency of chart interactions.
- Modifies chart rendering to set title colors to transparent.
 - Improves chart readability.
- Updates chart tests to reflect icon changes.
 - Ensures tests pass with the updated UI.
- Adds type definitions for chart label metadata.
 - Improves code maintainability.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.github/workflows/print-release-asset-sizes.yml
+++ b/.github/workflows/print-release-asset-sizes.yml
@@ -70,7 +70,7 @@ jobs:
                     total_size_gb=$(grep -oP '(?<=, )[0-9.]+ GB' sizes.md | head -1)
                     total_downloads=$(grep -oP '(?<=Total downloads across all releases:\*\*)[0-9]+' sizes.md | head -1)
                     echo "---"
-                    echo "### 📊 Totals"
+                    echo "### Totals"
                     echo "- **Total asset size:** $total_size bytes ($total_size_mb, $total_size_gb)"
                     echo "- **Total downloads:** $total_downloads"
                   } >> "$GITHUB_STEP_SUMMARY"
