✨ [feat] Integrate Vite for HMR and debugging
- 🚀 Integrates Vite for faster HMR and improved Electron debugging experience.
 - Updates `.gitignore` to exclude development and production environment files, and stylelint config.
- ⚙️ Configures VSCode tasks for development, build, and testing:
 - Adds tasks for starting the Vite dev server, building Vite, watching the main process, type checking, and linting.
 - Introduces a compound task for full-stack development, running Vite and watching the main process in parallel.
- 🛠️ Sets up VSCode launch configurations for debugging:
 - Adds configurations for attaching to the Electron main process, renderer process, and preload script.
 - Introduces a compound configuration to debug both main and renderer processes simultaneously.
- 📦 Updates `package.json` with new development and build scripts:
 - Adds scripts for starting the Vite dev server, watching the main process, building the renderer, and packaging the app.
 - Updates the `start` script to use the new development runner.
- ⚡ Creates a development runner script (`dev-runner.mjs`) to:
 - Start the Vite dev server automatically.
 - Launch Electron with debugging ports enabled.
 - Watch main process files and auto-restart Electron on changes.
- 📝 Adds documentation for the Vite + HMR + Electron debugging setup in `VITE_SETUP_SUMMARY.md`.
- 📁 Creates separate `.env` files for development and production, managing environment variables.
- 🔨 Extracts electron-builder configuration from `package.json` into a dedicated `electron-builder.config.js` file.
- 🎨 Updates `index.html` to allow connections to Vite dev server (http://localhost:5273).
- ✨ Adds `jszip.min-Cw1MSAQl.js` to use JSZip library.
- 🐛 Fixes renderer process imports by adding `@vite-ignore` to prevent Vite from processing them.
- 🧪 Modifies `test` and `test:changed` scripts to allocate more memory for tests.
- 🧹 Removes `stylelint`'s configuration.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -183,14 +183,21 @@
     ]
   },
   "scripts": {
+    "dev": "node scripts/dev-runner.mjs",
+    "dev:vite": "vite",
+    "dev:electron": "electron . --inspect=9230 --remote-debugging-port=9232",
+    "watch:main": "nodemon --watch main.js --watch preload.js --watch fitParser.js --exec \"echo Main process changed\"",
+    "build:vite": "vite build",
+    "build:electron": "electron-builder",
+    "build": "npm run build:vite && npm run build:electron",
+    "preview": "vite preview",
     "tests:convert-to-ts": "node ./scripts/convert-tests-to-ts.mjs",
     "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=dot --silent",
     "test:changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --changed --run --reporter=dot --silent",
     "test:jest": "jest",
-    "start": "electron . --inspect=9230 --remote-debugging-port=9232",
+    "start": "npm run dev",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
-    "build": "electron-builder",
-    "build-all": "electron-builder -mwl",
+    "build-all": "npm run build:vite && electron-builder -mwl",
     "update-changelog": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
     "changelog": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
     "changelog:all": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
@@ -199,6 +206,7 @@
     "cliff": "powershell -ExecutionPolicy Bypass -File ../.github/Update-ChangeLogs.ps1",
     "cliff-all": "powershell -ExecutionPolicy Bypass -File ../.github/Update-ChangeLogs.ps1",
     "clean-releases": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1",
+    "lint:css": "stylelint --cache --config stylelint.config.js \"**/*.css\"",
     "clean-releases-tags": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags",
     "clean-releases:1": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags -keepLast 1",
     "clean-releases:2": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags -keepLast 2",
@@ -376,7 +384,7 @@
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.2",
     "@eslint/css": "0.11.1",
-    "@eslint/js": "^9.36.0",
+    "@eslint/js": "^9.37.0",
     "@eslint/json": "^0.13.2",
     "@eslint/markdown": "7.3.0",
     "@kurkle/color": "^0.4.0",
@@ -385,21 +393,25 @@
     "@types/jsdom": "^27.0.0",
     "@types/mocha": "10.0.10",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitest/coverage-v8": "^3.2.4",
     "color": "^5.0.2",
     "cross-env": "^10.1.0",
-    "electron": "38.2.0",
+    "dotenv": "^17.2.3",
+    "electron": "38.2.1",
     "electron-builder": "^26.0.20",
     "electron-builder-squirrel-windows": "^26.0.19",
-    "eslint": "^9.36.0",
+    "electron-vite": "^4.0.1",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-n": "^17.23.1",
-    "eslint-plugin-perfectionist": "^4.15.0",
+    "eslint-plugin-perfectionist": "^4.15.1",
     "eslint-plugin-unicorn": "^61.0.2",
     "git-cliff": "^2.10.1",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
     "makensis": "^3.0.3",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "postcss-value-parser": "^4.2.0",
     "prettier": "^3.6.2",
@@ -417,6 +429,9 @@
     "stylelint-config-standard": "^39.0.0",
     "ts-migrate": "^0.1.35",
     "ts-migrate-plugins": "^0.1.35",
+    "vite": "^7.1.9",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "vitest": "^3.2.4"
   },
   "dependencies": {
