--- a/electron-app/tsconfig.json
+++ b/electron-app/tsconfig.json
@@ -134,7 +134,7 @@
         "vitest.config.ts",
         "vitest.shared.config.ts",
         "tailwind.config.mjs"
-    ],
+, "scripts/dev-runner.mjs"    ],
     "typeAcquisition": {
         "enable": true
     }
