--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,6 @@ electron-app/html/
 electron-app/coverage_output.txt
 electron-app/coverage-temp.json
 electron-app/recent-files-test.json
+electron-app/.stylelintignore
+electron-app/.env.development
+electron-app/.env.production
