--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,16 +2,99 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "Start Vite Dev Server",
             "type": "npm",
-            "script": "watch",
-            "problemMatcher": "$tsc-watch",
+            "script": "dev:vite",
+            "path": "electron-app/",
             "isBackground": true,
+            "problemMatcher": {
+                "owner": "typescript",
+                "pattern": {
+                    "regexp": "^([^\\s].*)\\((\\d+|\\d+,\\d+|\\d+,\\d+,\\d+,\\d+)\\):\\s+(error|warning|info)\\s+(TS\\d+)\\s*:\\s*(.*)$",
+                    "file": 1,
+                    "location": 2,
+                    "severity": 3,
+                    "code": 4,
+                    "message": 5
+                },
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": "^.*starting.*$",
+                    "endsPattern": "^.*ready in.*$"
+                }
+            },
             "presentation": {
-                "reveal": "never"
+                "reveal": "always",
+                "panel": "dedicated",
+                "group": "dev"
             },
             "group": {
                 "kind": "build",
                 "isDefault": true
+            }
+        },
+        {
+            "label": "Build Vite",
+            "type": "npm",
+            "script": "build:vite",
+            "path": "electron-app/",
+            "problemMatcher": [
+                "$tsc"
+            ],
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "group": "build"
+            }
+        },
+        {
+            "label": "Watch Main Process",
+            "type": "npm",
+            "script": "watch:main",
+            "path": "electron-app/",
+            "isBackground": true,
+            "problemMatcher": {
+                "pattern": {
+                    "regexp": "."
+                },
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": ".",
+                    "endsPattern": "."
+                }
+            },
+            "presentation": {
+                "reveal": "never",
+                "panel": "dedicated",
+                "group": "watch"
+            }
+        },
+        {
+            "label": "Type Check",
+            "type": "npm",
+            "script": "typecheck",
+            "path": "electron-app/",
+            "problemMatcher": [
+                "$tsc"
+            ],
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "group": "test"
+            }
+        },
+        {
+            "label": "Lint",
+            "type": "npm",
+            "script": "lint",
+            "path": "electron-app/",
+            "problemMatcher": [
+                "$eslint-stylish"
+            ],
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "group": "test"
             }
         },
         {
@@ -22,6 +105,20 @@
             "isBackground": false,
             "problemMatcher": ["$eslint-stylish"],
             "group": "build"
+        },
+        {
+            "label": "Dev: Full Stack",
+            "dependsOn": [
+                "Start Vite Dev Server",
+                "Watch Main Process"
+            ],
+            "dependsOrder": "parallel",
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated",
+                "group": "dev"
+            }
         }
     ]
 }
