🚜 [refactor] Modernize app state management
Refactors the application's state management to leverage a vanilla Zustand store, promoting immutability, simplifying debugging, and paving the way for future enhancements

- 🧩 Introduces a centralized, path-based state management system using Zustand
 - Replaces direct `window` and `globalThis` mutations with controlled state updates
 - Improves state management by using explicit getter and setter methods
- 🔄 Migrates various components to consume and update state via state manager API
 - Updates chart components to use the new state getters, improving data flow
 - Modifies overlay-related code to use state manager for file loading and marker management
- 🗑️ Removes legacy code and reactive property definitions
 - Removes direct property definitions on `globalThis` and `window`
 - Cleans up legacy state migration and persistence logic
- 🧪 Updates tests to align with the new state management paradigm
 - Refactors tests to mock `getState` and `setState`

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,4 @@ electron-app/recent-files-test.json
 electron-app/.stylelintignore
 electron-app/.env.development
 electron-app/.env.production
+html/
