--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -392,8 +392,11 @@
     "@types/jest": "^30.0.0",
     "@types/jsdom": "^27.0.0",
     "@types/mocha": "10.0.10",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@vitejs/plugin-legacy": "^7.2.1",
+    "@vitejs/plugin-react": "^5.0.4",
     "@vitest/coverage-v8": "^3.2.4",
     "color": "^5.0.2",
     "cross-env": "^10.1.0",
@@ -460,6 +463,8 @@
     "leaflet.locatecontrol": "^0.85.1",
     "leaflet.markercluster": "^1.5.3",
     "maplibre-gl": "^5.8.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "screenfull": "^6.0.2",
     "zustand": "^5.0.8"
   },
